--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,6 +4,33 @@
 //config
 @import "config/*.scss";
 
-//layout
 
-//blocks
+body, html {
+    height: 100%;
+  }
+  body {
+    background-image: url('https://ilyakhasanov.ru/images/background/64.png');
+  }
+  
+  .wrapper {
+    display: block;
+    margin: 40px auto;
+    width: 300px;
+    height: 350px;
+    background-color: #000;
+    position: relative;
+    border: 2px solid rgb(73, 97, 61);
+  }
+  
+  .player {
+    transition: 0.5s;
+    width: 40px;
+    height: 40px;
+    background: url('http://game-icons.net/icons/lorc/originals/svg/squid-head.svg');
+    position: absolute;
+    bottom: 0;
+    transform: translate(-50%, 0);
+    left: 50%;
+    right: 50%;
+    
+  }
